# hayamiru

./: .gitignore  TRANSLATE_IMPL.md  dev.bat  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.js
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: audio_fx.rs  media_info.rs  mod.rs  opensubtitles.rs  playback.rs  playlist.rs  settings.rs  tracks.rs  translate.rs  video.rs  window.rs
src-tauri/src/mpv/: events.rs  ffi.rs  mod.rs  player.rs  types.rs
src-tauri/src/services/: audio_fx.rs  media_info.rs  mod.rs  opensubtitles.rs  playback.rs  playlist.rs  settings.rs  subtitle_extract.rs  tracks.rs  translate.rs  video.rs
src-tauri/src/state/: mod.rs
src/lib/bindings/: audio-fx.ts  media-info.ts  opensubtitles.ts  playback.ts  playlist.ts  settings.ts  tracks.ts  translate.ts  video.ts  window.ts
src/lib/components/: AudioPanel.svelte  ContextMenu.svelte  MediaInfoPanel.svelte  PlaylistPanel.svelte  SeekBar.svelte  Select.svelte  SettingsPanel.svelte  SubtitlePanel.svelte  TitleBar.svelte  VideoControls.svelte  VolumeSlider.svelte
src/lib/i18n/: ar.ts  de.ts  en.ts  es.ts  fr.ts  hi.ts  index.svelte.ts  it.ts  ja.ts  ko.ts  pt.ts  ru.ts  zh.ts
src/lib/stores/: keybindings.svelte.ts  player.svelte.ts  settings.svelte.ts  subtitle-style.svelte.ts
src/lib/utils/: format-time.ts  lang-names.ts
src/routes/: +page.svelte
