[package]
name = "hayamiru"
version = "0.1.0"
description = "Ultra-performant video player"
edition = "2021"

[lib]
name = "hayamiru_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
libloading = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "6"
chrono = "0.4"
reqwest = { version = "0.12", features = ["json"] }
urlencoding = "2"
tokio = { version = "1", features = ["time"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = ["Win32_Foundation"] }
